# curseforge_to_multimc

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config
.github/workflows/: build.yml  ci.yml  manual.yml  tagged_release.yml
assets/: raw_icon.rs
src/: app.rs  directories.rs  directory.rs  event.rs  ext.rs  flags.rs  instance.rs  link.rs  main.rs  misc.rs  modpack.rs  settings.rs  util.rs
src/app/: icon.rs  mod.rs
wix/: License.rtf  main.wxs
