[package]
name = "curseforge_to_multimc"
version = "0.5.2"
authors = ["Ricky12Awesome <rickygraveen@gmail.com>"]
edition = "2018"
description = "Links CurseForge instances to MultiMC instances"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ricky12Awesome/curseforge_to_multimc"
homepage = "https://github.com/Ricky12Awesome/curseforge_to_multimc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2"
confy = "^0.4"
iced = "^0.3"
iced_native = "^0.4"
thiserror = "^1"
open = "^1"
symlink = "^0.1"
image = "^0.23"
native-dialog = "^0.5"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

[build-dependencies]
image = "^0.23"

[target.'cfg(windows)'.dependencies]
winapi = "^0.3"

[target.'cfg(windows)'.build-dependencies]
winapi = "^0.3"
winres = "^0.1"

