[package]
name = "curseforge_to_multimc"
version = "0.5.2"
authors = ["Ricky12Awesome <rickygraveen@gmail.com>"]
edition = "2021"
description = "Links CurseForge instances to MultiMC instances"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ricky12Awesome/curseforge_to_multimc"
homepage = "https://github.com/Ricky12Awesome/curseforge_to_multimc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2"
confy = "^0.4.0"
iced =  "^0.4"
iced_native = "^0.5"
thiserror = "^1"
open = "^1.7"
symlink = "^0.1"
image = "^0.24"
native-dialog = "^0.6"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features=["winnt"] }

[target.'cfg(windows)'.build-dependencies]
winapi = { version = "^0.3", features=["winnt"] }
winres = "^0.1"

